force-app/main/default/objects/Attachments__c/Attachments__c.object-meta.xml
<CustomObject>
    <label>Attachment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Attachments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>