force-app/main/default/objects/Attachments__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>