force-app/main/default/objects/Attachments__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>