force-app/main/default/objects/Attachments__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <type>TextArea</type>
</CustomField>